# transcription_tool

./: .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.prod.yml  pyproject.toml
app/: __init__.py  main.py
app/core/: config.py  logging.py  session.py
app/models/: schemas.py
app/routers/: api.py  pages.py
app/services/: job_manager.py  transcriber.py  transcription.py
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: base.html  index.html
app/templates/partials/: meeting_minutes.html  summary.html  transcription.html
uploads/: transcription.txt
