[project]
name = "transcription-tool"
version = "0.1.0"
description = "Video transcription tool with summarization and meeting minutes extraction"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.3",
    "aiofiles>=23.2.1",
    "sse-starlette>=2.0.0",
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
